--- a/views/app.pug
+++ b/views/app.pug
@@ -66,17 +66,6 @@ html(lang="en")
             ],
             "description": "#{defaults.description}",
             "jobTitle": "Mechatronics Engineer",
-            "hasOccupation": {
-              "@type": "Occupation",
-              "name": "Mechatronics Engineer",
-              "occupationLocation": "Ontario Tech University",
-              "educationRequirements": "Bachlors of Mechatronics Engineering",
-              "description": "Mechatronics, which is also called mechatronic engineering, is a multidisciplinary branch of engineering that focuses on the engineering of both electrical and mechanical systems, and also includes a combination of robotics, electronics, computer, telecommunications, systems, control, and product engineering.",
-              "mainEntityOfPage": {
-                "@type": "WebPage",
-                "@id": "#{defaults.websiteURL}/my-projects.html"
-              }
-            },
             "logo": {
               "@type": "ImageObject",
               "@id": "#{defaults.websiteURL}/#logo",
@@ -101,6 +90,9 @@ html(lang="en")
             "@type": "WebSite",
             "@id": "#{defaults.websiteURL}/#website",
             "url": "#{defaults.websiteURL}",
+            "logo": {
+              "@id": "#{defaults.websiteURL}/#logo"
+            },
             "description": "#{defaults.description}",
             "sameAs": [
               "https://www.linkedin.com/in/o-josephojo/",
@@ -109,7 +101,8 @@ html(lang="en")
             ],
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "#{defaults.websiteURL}/my-projects.html"
+              "@id": "#{defaults.websiteURL}/my-projects.html",
+              "lastReviewed": "Thu Mar 26 2020 15:35:01 GMT-0400"
             },
             "about": {
               "@id": "#{defaults.websiteURL}/#person"
