Better SEO coverage

--- a/views/app.pug
+++ b/views/app.pug
@@ -22,7 +22,7 @@ html(lang="en")
         websiteURL,
         name: "index",
         title: "Joseph Ojo — Mechatronics Engineer / Portfolio",
-        description: "I'm Joseph Ojo, a skilled Mechatronics Engineer based in Oshawa, Canada. Experienced with multiple forms of technology, and an alumni of Ontario Tech. This is my portfolio site, it holds my resume and ways to contact me."
+        description: "I'm Joseph Ojo, a skilled Mechatronics Engineer based in Oshawa, Canada. An alumni of Ontario Tech. This is my portfolio site, it holds my resume and ways to contact me."
       };
 
     block pageInfo
