Added joseph's image, and a letter head

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -131,6 +131,7 @@ $colors: (
     "light": $light,
     "mid-light": $mid-light,
     "mid": $mid,
+    "dim": #77709e,
     "mid-dark": $mid-dark,
     "dark": $dark
 );
@@ -159,6 +160,7 @@ $dark-colors: (
     "light": #525252,
     "mid-light": $mid-light,
     "mid": $mid,
+    "dim": #696873,
     "mid-dark": #bbb8b8,
     "dark": #ddd
 );
