--- a/views/app.pug
+++ b/views/app.pug
@@ -62,7 +62,9 @@ html(lang="en")
             "sameAs": [
               "https://www.linkedin.com/in/o-josephojo/",
               "https://github.com/laoluojo",
-              "https://www.f6s.com/olaoluwajosephojo"
+              "https://github.com/okikio/joseph",
+              "https://www.f6s.com/olaoluwajosephojo",
+              "https://ca.alumnius.net/university_of_ontario_institute_of_technology-33082-10#id436734411"
             ],
             "description": "#{defaults.description}",
             "jobTitle": "Mechatronics Engineer",
@@ -75,7 +77,12 @@ html(lang="en")
               "caption": "Joseph Ojo's Logo"
             },
             "image": {
-              "@id": "#{defaults.websiteURL}/#logo"
+              "@type": "ImageObject",
+              "@id": "#{defaults.websiteURL}/#image",
+              "url": "https://res.cloudinary.com/okikio-assets/image/upload/josephs_image.jpg",
+              "width": 200,
+              "height": 200,
+              "caption": "An image of Joseph Ojo."
             },
             "contactPoint" : [
               {
@@ -97,7 +104,8 @@ html(lang="en")
             "sameAs": [
               "https://www.linkedin.com/in/o-josephojo/",
               "https://github.com/laoluojo",
-              "https://www.f6s.com/olaoluwajosephojo"
+              "https://github.com/okikio/joseph",
+              "https://www.f6s.com/olaoluwajosephojo",
             ],
             "mainEntityOfPage": {
               "@type": "WebPage",
