--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -21,8 +21,13 @@ block content
       section
         +head
           h1.style-font-30--device-phone.style-primary-dark.style-bold.style-uppercase Say Hello — Lets talk
-        +main
-          span(itemprop='author') Hey, I am Joseph Ojo, the man, the myth, the legend, let's talk.
+        +main({
+          class: "layout-clearfix"
+        })
+          //- span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left H
+          +p("Hey, I am ")
+            span(itemprop='author') Joseph Ojo
+            span , the man, the myth, the legend, let's talk.
           span.layout-margin-vert-bottom(itemprop='description')
             p.layout-inline.layout-margin-dull(lorem="1")
             span(itemtype='https://schema.org/EducationalOrganization' itemprop="alumniOf")
