--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -31,11 +31,11 @@ block content
     })
       +head("A porfolio of projects.")
       +main({
-        class: "layout-padding-vert-small"
+        class: "layout-padding-vert-small layout-clearfix"
       })
-        +p(" ")
-          span.layout-margin-horz-left-large.layout-inline-block= " "
-          span.layout-inline.layout-margin-dull As a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
+        +p
+          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
+          span.layout-inline.layout-margin-dull s a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
           +p("<br> <br>")
           p.layout-inline.layout-margin-dull(lorem="3")
           +p("<br> <br> I am a curious person, so, I take on the most intresting projects. I love to explore new ways to approach problems and to solve them in a manner that lets me push myself to new heights. My dream is to work on a project that revelutionizes the world, and some day I believe I will achieve my goal. How about that,")
