--- a/views/pages/projects/nasa.pug
+++ b/views/pages/projects/nasa.pug
@@ -6,14 +6,14 @@ block pageInfo
       websiteURL,
       url: "/projects/nasa",
       name: "nasa",
-      title: "Nasa - Wait what???",
+      title: "Nasa — A project I did with Nasa.",
       description: "Nasa and I, Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt..."
     };
 
 block content
   //- Banner layer
   +banner({
-    title: "A project I did with Nasa.",
+    title: "Nasa — A project I did with Nasa.",
     content: "Nasa and I, Lorem Ipsium dolor sit amet, consectetur adipiscing elit, sed do eiusmod...",
     image: {
       class: "effect-parallax hero-img",
@@ -31,10 +31,11 @@ block content
     })
       +head("What did I do?")
       +main({
-        class: "layout-padding-vert-small"
+        class: "layout-padding-vert-small layout-clearfix"
       })
-        +p(" ")
-          span.layout-margin-horz-left-large.layout-inline-block= " "
+        +p
+          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
+          span.layout-inline.layout-margin-dull s a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
           span.layout-inline.layout-margin-dull(lorem="1")
           p.layout-inline.layout-margin-dull(lorem="3")
           span.layout-inline.layout-margin-dull  Some more electrical, lorem ipsum dolor,
