--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -25,7 +25,7 @@ block content
       })
         section.layout-padding-top.layout-padding-bottom-large.layout-clearfix
           //- span.layout-margin-horz-left.layout-inline-block= " "
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left.layout-margin-horz-left O
+          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left O
           +p("ne of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... As a child I was curious, and my parents let my curiousity bloom. In high school I discovered a passion for engineering specifically the engineering of robots (which I later found out to be <strong>Mechatronics</strong>). <br> <br> I am Tenacious & Astute I aim to create only the best, I stop at nothing till the image I have in my mind has been captured in the project. I make sure that in all acts I commit too, I am ready to follow through even if the going gets difficult. I make sure to think things through thoroughly so as to avoid inefficienies. The definition of Astute by the Oxford dictionary is, ​very clever and quick at seeing what to do in a particular situation, especially how to get an advantage. I believe I enbody these traits when working on projects and I would love the oppertunity to show you. <br> <br> I created my portfolio site as a place to display some of the projects I have worked on, and as an easy source to access my resume. For more information")
           +link({
             href: "/about-me",
