--- a/views/app.pug
+++ b/views/app.pug
@@ -80,8 +80,8 @@ html(lang="en")
               "@type": "ImageObject",
               "@id": "#{defaults.websiteURL}/#image",
               "url": "https://res.cloudinary.com/okikio-assets/image/upload/josephs_image.jpg",
-              "width": 200,
-              "height": 200,
+              "width": 410,
+              "height": 512,
               "caption": "An image of Joseph Ojo."
             },
             "contactPoint" : [
@@ -131,7 +131,7 @@ html(lang="en")
             "@id": "#{page.websiteURL + page.url}#webpage",
             "url": "#{page.websiteURL + page.url}",
             "description": "#{page.description}",
-            "inLanguage": "en-US",
+            "inLanguage": "en",
             "name": "#{page.title}",
             "isPartOf": {
               "@id": "#{defaults.websiteURL}/#website"
