--- a/views/pages/my-resume.pug
+++ b/views/pages/my-resume.pug
@@ -22,7 +22,7 @@ block content
         +head
           h1.style-font-30--device-phone.style-primary-dark.style-bold.style-uppercase My resume — My professional resume.
         +main({
-          class: "layout-clearfix"
+          class: "layout-clearfix style-align-justify"
         })
           //- span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left H
           span.style-color-dim.layout-right
