--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -31,7 +31,7 @@ block content
     })
       +head("A porfolio of projects.")
       +main({
-        class: "layout-padding-vert-small layout-clearfix"
+        class: "layout-padding-vert-small layout-clearfix style-align-justify"
       })
         +p
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
