--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -206,7 +206,7 @@
     }
 
     &-center-line {
-        padding: $size-large;
+        padding: $size-larger;
         width: 100%;
 
         &:before {
