--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -22,10 +22,10 @@ block content
         +head
           h1.style-font-30--device-phone.style-primary-dark.style-bold.style-uppercase Say Hello — Lets talk
         +main({
-          class: "layout-clearfix"
+          class: "layout-padding-vert-small layout-clearfix"
         })
-          //- span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left H
-          +p("Hey, I am ")
+          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left H
+          +p("ey, I am ")
             span(itemprop='author') Joseph Ojo
             span , the man, the myth, the legend, let's talk.
           span.layout-margin-vert-bottom(itemprop='description')
