--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -20,9 +20,7 @@ block content
       class: "layout-shorten layout-contain"
     })
       +head("About me.")
-      +main({
-          class: "layout-padding-top-large"
-      })
+      +main
         section.layout-padding-top.layout-padding-bottom-large.layout-clearfix
           //- span.layout-margin-horz-left.layout-inline-block= " "
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left O
