--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -31,9 +31,10 @@ block content
     })
       +head("A porfolio of projects.")
       +main({
-        class: "layout-padding-vert-small layout-clearfix style-align-justify"
+        class: "layout-padding-vert-small layout-clearfix"
       })
         +p
+          //- span.layout-margin-horz-left.layout-inline-block= " "
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
           span.layout-inline.layout-margin-dull s a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
           +p("<br> <br>")
