--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -30,7 +30,7 @@ block content
     })
       +head("The story of Joseph Ojo.")
       +main({
-        class: "layout-padding-vert-large layout-clearfix"
+        class: "layout-padding-top layout-padding-bottom-large layout-clearfix"
       })
         +tile({
           class: "layer-surface layout-block layer-tile-outline layer-joseph-img layout-left layer-shadow--1",
@@ -41,6 +41,7 @@ block content
         })
 
         section
+          //- span.layout-margin-horz-left.layout-inline-block= " "
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left O
           +p("ne of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes. <br> <br> As a child I was curious, and my parents let my curiousity bloom. In high school I discovered a passion for engineering specifically the engineering of robots (which I later found out to be <strong>Mechatronics</strong>). So, I pursed this as a career choice in university, at Ontario Tech in Oshawa, Ontario (formally UOIT; it's near Toronto, Canada). I graduated with honors with a Bachlor of mechatronic engineering, and went straight into my masters. I am finishing up my masters this year and am available for any projects that requires inovative and creative thinking, as well as dedication. <br> <br> In case you are wondering, my skills outside engineering are problem-solving, leadership, communication and conflict resolution. For more information check out")
           +link({
