--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -33,7 +33,7 @@ block content
         class: "layout-padding-top layout-padding-bottom-large layout-clearfix"
       })
         +tile({
-          class: "layer-surface layout-block layer-tile-outline layer-joseph-img layout-left layer-shadow--1",
+          class: "layer-surface layer-box layout-block layer-tile-outline layer-joseph-img layout-left layer-shadow--1",
           image: {
             src: "cloudinary/josephs_image",
             alt: "An image of Joseph Ojo",
@@ -49,11 +49,3 @@ block content
             class: "layout-margin-vert-dull layout-margin-left-mini",
             content: "my resume."
           })(data-swup-preload)
-
-        +tile({
-          class: "layer-surface layout-block layer-tile-outline layer-joseph-img layout-right layer-shadow--1",
-          image: {
-            src: "cloudinary/josephs_image",
-            alt: "An image of Joseph Ojo",
-          }
-        })
