--- a/views/pages/contact-me.pug
+++ b/views/pages/contact-me.pug
@@ -16,7 +16,7 @@ block content
     class: "layout-padding-horz-default header-top-spot"
   })
     +layout({
-      class: "layout-contain-small layout-vert-centered-box"
+      class: "layout-contain-small layout-padding-vert"
     })
       section
         +head
@@ -50,8 +50,3 @@ block content
                   href: "mailto:laoluojo@gmail.com",
                   content: "Email"
                 })(target="_blank" rel="noreferrer noopener")
-
-block footer
-  +footer({
-    class: "layout-margin-vert-top"
-  })
