--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -8,7 +8,7 @@ block content
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/grand-canyon",
-      alt: "An image looking up from inside the Grand Canyon from Unsplash."
+      alt: "An image looking up from inside the Grand Canyon from Unsplash by @sammiamigo."
     }
   })
 
