--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -18,7 +18,7 @@ block content
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/blue-sky",
-      alt: "An image of a bright blue sky with small patches of clouds over two appartment high rises that are just barely in frame, from Unsplash. "
+      alt: "An image of a bright blue sky with small patches of clouds over two appartment high rises that are just barely in frame, from Unsplash by @ninovisalli."
     }
   })
 
