--- a/views/pages/projects/google-designs.pug
+++ b/views/pages/projects/google-designs.pug
@@ -18,7 +18,7 @@ block content
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/engineer-piping",
-      alt: "An image of large pipes for a Power Plant from Unsplash."
+      alt: "An image of large pipes for a Power Plant from Unsplash by @martinadams."
     }
   })
 
