--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -47,7 +47,7 @@
             top: 0;
 
             &.plchldr-pic {
-                z-index: 500;
+                // z-index: 500;
             }
         }
 
@@ -92,7 +92,8 @@
         &--1 {
             // box-shadow: 0 5px 14px 6px rgba(0,0,0,.23);
             // box-shadow: 0 5px 14px 6px rgba(19, 19, 19, 0.23);
-            box-shadow: 0 2px 10px 2px rgba(33, 33, 33, 0.22);
+            // box-shadow: 0 2px 10px 2px rgba(33, 33, 33, 0.22);
+            box-shadow: 0 0 10px 2px rgba(33, 33, 33, .12);
             // border: 1px solid change-color($white, $alpha: 0.7);
             // border-color: var(--tertiary, white);
             // border: 2px solid var(--dark);
@@ -109,6 +110,15 @@
         overflow: hidden;
     }
 
+    &:not(.banner-mode) .layer-image {
+        border-radius: 15px;
+    }
+
+    &.banner-mode .layer-image figcaption {
+        padding: $size;
+        padding-top: $size-small + 60px;
+    }
+
     &-hero,
     %hero {
         // @extend %shadow;
@@ -116,18 +126,11 @@
         position: relative;
         z-index: 125;
 
-        &:not(.banner-mode) .layer-image {
-            border-radius: 15px;
-        }
-
-        &.banner-mode .layer-image figcaption {
-            padding: $size;
-            padding-top: $size-small + 60px;
-        }
-
         .layer-image {
+            cursor: help;
+
             img {
-                transform: scale(1.2);
+                // transform: scale(1.2);
                 color: transparent;
                 min-width: 500px;
             }
@@ -236,26 +239,12 @@
         }
 
         &.layout-left {
-            display: block !important;
             margin-bottom: $size;
             margin-right: $size;
         }
 
-        &.layout-right {
-            display: none !important;
-            margin-top: $size-small;
-        }
-
         @media #{$screen-size-lt-tablet} {
             max-width: 100%;
-
-            &.layout-left {
-                display: none !important;
-            }
-
-            &.layout-right {
-                display: block !important;
-            }
         }
 
         .placeholder-img {
