Replace display: none with visibility: hidden

--- a/src/scss/components/layout.scss
+++ b/src/scss/components/layout.scss
@@ -360,8 +360,9 @@
     }
 
     &-display-none {
-        display: none;
-        @include deviceList(display, none);
+        // display: none;
+        visibility: hidden;
+        // @include deviceList(display, none);
 
     }
 
