--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -20,6 +20,7 @@
 
 /* latin */
 @font-face {
+    --latin: true;
     font-family: 'Frank Ruhl Libre';
     font-style: normal;
     font-weight: 500;
@@ -50,6 +51,7 @@
 
 /* latin */
 @font-face {
+    --latin: true;
     font-family: 'Frank Ruhl Libre';
     font-style: normal;
     font-weight: 900;
@@ -100,6 +102,7 @@
 
 /* latin */
 @font-face {
+    --latin: true;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
@@ -150,6 +153,7 @@
 
 /* latin */
 @font-face {
+    --latin: true;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 800;
@@ -220,6 +224,7 @@
 
 /* latin */
 @font-face {
+    --latin: true;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -260,6 +265,7 @@
 
 /* latin */
 @font-face {
+    --latin: true;
     font-family: 'Varela Round';
     font-style: normal;
     font-weight: 400;
