Github pages please work ...

--- a/views/components/footer.pug
+++ b/views/components/footer.pug
@@ -22,7 +22,7 @@ mixin footer(value = {})
                 span.layout-padding-left-smaller -
                 span.action-btn-spacer
           +link({
-            href: "/sitemap",
+            href: "../sitemap",
             class: "layout-inline-block",
           })(itemprop="url")
             span(itemprop="name") Sitemap
