--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -4,7 +4,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: local('Frank Ruhl Libre Medium'), local('FrankRuhlLibre-Medium'), url(/fonts/frank-ruhl-libre--medium_hebrew.woff2) format('woff2'), url(/fonts/frank-ruhl-libre--medium_hebrew.woff) format('woff');
+    src: local('Frank Ruhl Libre Medium'), local('FrankRuhlLibre-Medium'), url(../fonts/frank-ruhl-libre--medium_hebrew.woff2) format('woff2'), url(../fonts/frank-ruhl-libre--medium_hebrew.woff) format('woff');
     unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 
@@ -14,7 +14,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: local('Frank Ruhl Libre Medium'), local('FrankRuhlLibre-Medium'), url(/fonts/frank-ruhl-libre--medium_latin-ext.woff2) format('woff2');
+    src: local('Frank Ruhl Libre Medium'), local('FrankRuhlLibre-Medium'), url(../fonts/frank-ruhl-libre--medium_latin-ext.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -25,7 +25,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: local('Frank Ruhl Libre Medium'), local('FrankRuhlLibre-Medium'), url(/fonts/frank-ruhl-libre--medium_latin.woff2) format('woff2'), url(/fonts/frank-ruhl-libre--medium_hebrew.woff) format('woff');
+    src: local('Frank Ruhl Libre Medium'), local('FrankRuhlLibre-Medium'), url(../fonts/frank-ruhl-libre--medium_latin.woff2) format('woff2'), url(../fonts/frank-ruhl-libre--medium_hebrew.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -35,7 +35,7 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: local('Frank Ruhl Libre Black'), local('FrankRuhlLibre-Black'), url(/fonts/frank-ruhl-libre--black_hebrew.woff2) format('woff2'), url(/fonts/frank-ruhl-libre--black_hebrew.woff) format('woff');
+    src: local('Frank Ruhl Libre Black'), local('FrankRuhlLibre-Black'), url(../fonts/frank-ruhl-libre--black_hebrew.woff2) format('woff2'), url(../fonts/frank-ruhl-libre--black_hebrew.woff) format('woff');
     unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 
@@ -45,7 +45,7 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: local('Frank Ruhl Libre Black'), local('FrankRuhlLibre-Black'), url(/fonts/frank-ruhl-libre--black_latin-ext.woff2) format('woff2');
+    src: local('Frank Ruhl Libre Black'), local('FrankRuhlLibre-Black'), url(../fonts/frank-ruhl-libre--black_latin-ext.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -56,7 +56,7 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: local('Frank Ruhl Libre Black'), local('FrankRuhlLibre-Black'), url(/fonts/frank-ruhl-libre--black_latin.woff2) format('woff2'), url(/fonts/frank-ruhl-libre--black_latin.woff) format('woff');
+    src: local('Frank Ruhl Libre Black'), local('FrankRuhlLibre-Black'), url(../fonts/frank-ruhl-libre--black_latin.woff2) format('woff2'), url(../fonts/frank-ruhl-libre--black_latin.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -66,7 +66,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(/fonts/montserrat--bold_cyrillic-ext.woff2) format('woff2');
+    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(../fonts/montserrat--bold_cyrillic-ext.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 
@@ -76,7 +76,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(/fonts/montserrat--bold_cyrillic.woff2) format('woff2');
+    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(../fonts/montserrat--bold_cyrillic.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
@@ -86,7 +86,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(/fonts/montserrat--bold_vietnamese.woff2) format('woff2');
+    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(../fonts/montserrat--bold_vietnamese.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
 }
 
@@ -96,7 +96,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(/fonts/montserrat--bold_latin-ext.woff2) format('woff2');
+    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(../fonts/montserrat--bold_latin-ext.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -107,7 +107,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(/fonts/montserrat--bold_latin.woff2) format('woff2'), url(/fonts/montserrat--bold_latin.woff) format('woff');
+    src: local('Montserrat Bold'), local('Montserrat-Bold'), url(../fonts/montserrat--bold_latin.woff2) format('woff2'), url(../fonts/montserrat--bold_latin.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -117,7 +117,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(/fonts/montserrat--extrabold_cyrillic-ext.woff2) format('woff2');
+    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(../fonts/montserrat--extrabold_cyrillic-ext.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 
@@ -127,7 +127,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(/fonts/montserrat--extrabold_cyrillic.woff2) format('woff2');
+    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(../fonts/montserrat--extrabold_cyrillic.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
@@ -137,7 +137,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(/fonts/montserrat--extrabold_vietnamese.woff2) format('woff2');
+    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(../fonts/montserrat--extrabold_vietnamese.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
 }
 
@@ -147,7 +147,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(/fonts/montserrat--extrabold_latin-ext.woff2) format('woff2');
+    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(../fonts/montserrat--extrabold_latin-ext.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -158,7 +158,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(/fonts/montserrat--extrabold_latin.woff2) format('woff2'), url(/fonts/montserrat--extrabold_latin.woff) format('woff');
+    src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'), url(../fonts/montserrat--extrabold_latin.woff2) format('woff2'), url(../fonts/montserrat--extrabold_latin.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -168,7 +168,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(/fonts/roboto--regular_cyrillic-ext.woff2) format('woff2');
+    src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto--regular_cyrillic-ext.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 
@@ -178,7 +178,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(/fonts/roboto--regular_cyrillic.woff2) format('woff2');
+    src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto--regular_cyrillic.woff2) format('woff2');
     unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
@@ -188,7 +188,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(/fonts/roboto--regular_greek-ext.woff2) format('woff2');
+    src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto--regular_greek-ext.woff2) format('woff2');
     unicode-range: U+1F00-1FFF;
 }
 
@@ -198,7 +198,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(/fonts/roboto--regular_greek.woff2) format('woff2');
+    src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto--regular_greek.woff2) format('woff2');
     unicode-range: U+0370-03FF;
 }
 
@@ -208,7 +208,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(/fonts/roboto--regular_vietnamese.woff2) format('woff2');
+    src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto--regular_vietnamese.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
 }
 
@@ -218,7 +218,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(/fonts/roboto--regular_latin-ext.woff2) format('woff2');
+    src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto--regular_latin-ext.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -229,7 +229,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Roboto'), local('Roboto-Regular'), url(/fonts/roboto--regular_latin.woff2) format('woff2'), url(/fonts/roboto--regular_latin.woff) format('woff');
+    src: local('Roboto'), local('Roboto-Regular'), url(../fonts/roboto--regular_latin.woff2) format('woff2'), url(../fonts/roboto--regular_latin.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -239,7 +239,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(/fonts/varela-round--regular_hebrew.woff2) format('woff2');
+    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(../fonts/varela-round--regular_hebrew.woff2) format('woff2');
     unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F;
 }
 
@@ -249,7 +249,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(/fonts/varela-round--regular_vietnamese.woff2) format('woff2');
+    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(../fonts/varela-round--regular_vietnamese.woff2) format('woff2');
     unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
 }
 
@@ -259,7 +259,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(/fonts/varela-round--regular_latin-ext.woff2) format('woff2');
+    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(../fonts/varela-round--regular_latin-ext.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -270,7 +270,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(/fonts/varela-round--regular_latin.woff2) format('woff2'), url(/fonts/varela-round--regular_latin.woff) format('woff');
+    src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(../fonts/varela-round--regular_latin.woff2) format('woff2'), url(../fonts/varela-round--regular_latin.woff) format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -280,5 +280,5 @@
 //     font-style: normal;
 //     font-weight: 400;
 //     font-display: swap;
-//     src: url(/fonts/material-icons.woff2) format('woff2'), url(/fonts/material-icons.woff) format('woff');
+//     src: url(../fonts/material-icons.woff2) format('woff2'), url(../fonts/material-icons.woff) format('woff');
 // }
