--- a/views/app.pug
+++ b/views/app.pug
@@ -39,11 +39,11 @@ html(lang="en")
       link(rel="dns-prefetch" href="https://d33wubrfki0l68.cloudfront.net/" crossorigin)
       link(rel="preconnect" href="https://d33wubrfki0l68.cloudfront.net/" crossorigin)
 
-    //- link(rel="preload" href="../fonts/roboto--regular_latin.woff2" as="font" crossorigin)
-    //- link(rel="preload" href="../fonts/montserrat--extrabold_latin.woff2" as="font" crossorigin)
-    //- link(rel="preload" href="../fonts/montserrat--bold_latin.woff2" as="font" crossorigin)
-    //- link(rel="preload" href="../fonts/frank-ruhl-libre--black_latin.woff2" as="font" crossorigin)
-    link(rel="stylesheet" href="../css/fonts.min.css" ph-inline)
+    //- link(rel="preload" href="./fonts/roboto--regular_latin.woff2" as="font" crossorigin)
+    //- link(rel="preload" href="./fonts/montserrat--extrabold_latin.woff2" as="font" crossorigin)
+    //- link(rel="preload" href="./fonts/montserrat--bold_latin.woff2" as="font" crossorigin)
+    //- link(rel="preload" href="./fonts/frank-ruhl-libre--black_latin.woff2" as="font" crossorigin)
+    link(rel="stylesheet" href="/css/fonts.min.css" ph-inline)
 
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible" content="ie=edge")
@@ -194,11 +194,11 @@ html(lang="en")
       +seo(page)
 
     <!--[if IE]>
-    link(rel="shortcut icon", href="../favicon/favicon.ico", type="image/x-icon")
+    link(rel="shortcut icon", href="./favicon/favicon.ico", type="image/x-icon")
     <![endif]-->
 
-    link(rel="manifest", href="../manifest.webmanifest")
-    link(type="text/plain" rel="author" href="../humans.txt")
+    link(rel="manifest", href="./manifest.webmanifest")
+    link(type="text/plain" rel="author" href="./humans.txt")
     link(rel="home", href=websiteURL)
 
     meta(name="theme-color", content="#2d22ca")
@@ -208,15 +208,15 @@ html(lang="en")
     meta(name="msapplication-TileColor", content="#2d22ca")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-title", content="Joseph Ojo")
-    meta(name="msapplication-config", content="../browserconfig.xml")
+    meta(name="msapplication-config", content="./browserconfig.xml")
     meta(name="apple-mobile-web-app-status-bar-style", content="#2d22ca")
-    meta(name="msapplication-TileImage", content="../favicon/ms-icon-144x144.png")
-    link(rel="mask-icon", href="../favicon/safari-pinned-tab.svg", color="#2d22ca")
-    link(rel="apple-touch-icon", sizes="180x180", href="../favicon/apple-touch-icon.png")
-    link(rel="icon", type="image/png", sizes="32x32", href="../favicon/favicon-32x32.png")
-    link(rel="icon", type="image/png", sizes="16x16", href="../favicon/favicon-16x16.png")
+    meta(name="msapplication-TileImage", content="./favicon/ms-icon-144x144.png")
+    link(rel="mask-icon", href="./favicon/safari-pinned-tab.svg", color="#2d22ca")
+    link(rel="apple-touch-icon", sizes="180x180", href="./favicon/apple-touch-icon.png")
+    link(rel="icon", type="image/png", sizes="32x32", href="./favicon/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="16x16", href="./favicon/favicon-16x16.png")
 
-    link(rel="stylesheet" href="../css/app.min.css" ph-inline)
+    link(rel="stylesheet" href="/css/app.min.css" ph-inline)
 
     //- <!--[if lt IE 9]>
     //- link(rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin)
@@ -254,4 +254,4 @@ html(lang="en")
 
     script(src="/js/vendor.min.js" ph-inline)
     //- if !dev
-      script(src="../js/service.min.js" ph-inline async)
+      script(src="./js/service.min.js" ph-inline async)
