--- a/views/app.pug
+++ b/views/app.pug
@@ -253,4 +253,4 @@ html(lang="en")
 
     script(src="/js/vendor.min.js" ph-inline)
     if !dev
-      script(src="/js/service.min.js" ph-inline)
+      script(src="/js/service.min.js" defer)
