--- a/views/app.pug
+++ b/views/app.pug
@@ -196,7 +196,7 @@ html(lang="en")
     link(rel="shortcut icon", href="/favicon/favicon.ico", type="image/x-icon")
     <![endif]-->
 
-    link(rel="manifest", href="/manifest.webmanifest")
+    link(rel="manifest", href="/manifest.json")
     link(type="text/plain" rel="author" href="/humans.txt")
     link(rel="home", href=websiteURL)
 
@@ -252,5 +252,5 @@ html(lang="en")
       +footer
 
     script(src="/js/vendor.min.js" ph-inline)
-    if !dev
-      script(src="/js/service.min.js" defer)
+    if !dev && !githubPages
+      script(src="/js/service.min.js" ph-inline)
