--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -28,11 +28,12 @@ mixin navbar(value = {})
 
         .layout-spacer.navbar-desktop
         .navbar-main
-          ul.navbar-list
+          ul.navbar-list(itemscope itemtype="http://schema.org/BreadcrumbList")
             each tab, i in tabs
-              li
-                +link({
-                  href: `/${tab}`,
-                  class: `navbar-link${i == focusIndex ? " navbar-link-focus" : ""}`
-                })(itemprop="url" data-swup-preload title=`${tab[0].toUpperCase() + tab.slice(1)} page link`)
-                  span.navbar-link-content(itemprop="name")= tab
+              li(itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem")
+                span(itemprop="item")
+                  +link({
+                    href: `/${tab}`,
+                    class: `navbar-link${i == focusIndex ? " navbar-link-focus" : ""}`
+                  })(itemprop="url" tabindex="-1" data-swup-preload title=`${tab[0].toUpperCase() + tab.slice(1)} page link`)
+                    span.navbar-link-content(itemprop="name")= tab
